--- a/AugmentEPF/app/src/main/res/values/strings.xml
+++ b/AugmentEPF/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AugmentEPF</string>
+    <string name="app_need_location">This app needs location access</string>
+    <string name="app_need_location_message">Please grant location access so this app can detect beacons in the background.</string>
 </resources>
