Fixed few bugs :  - Changing orientation doesn't make the app crash anymore  - Clicking on center screen to user button doesn't make the app crash anymore when there is no location  - Moving the panels doesn't make the map moving anymore

--- a/AugmentEPF/app/src/main/res/values-fr/strings.xml
+++ b/AugmentEPF/app/src/main/res/values-fr/strings.xml
@@ -113,6 +113,7 @@
         <item>Sonnerie</item>
         <item>E-mail</item>
     </string-array>
+    <string name="not_localized">Vous n\'avez pas encore été localisé</string>
 
 
 </resources>
