--- a/AugmentEPF/app/src/main/res/values-fr/strings.xml
+++ b/AugmentEPF/app/src/main/res/values-fr/strings.xml
@@ -37,10 +37,11 @@
     <!-- User type -->
     <!-- Different specific attribute -->
     <string-array name="user_type_array">
+        <item>Étudiant</item>
         <item>Visiteur</item>
-        <item>Etudiant</item>
         <item>Professeur</item>
-        <item>Administration</item>
+        <item>Intervenant</item>
+        <item>Admin</item>
     </string-array>
     <!-- The value of the choice above -->
     <string-array name="user_type_values_array">
@@ -114,6 +115,18 @@
         <item>E-mail</item>
     </string-array>
     <string name="not_localized">Vous n\'avez pas encore été localisé</string>
+    <string name="info_restroom_man">Toilettes pour hommes.</string>
+    <string name="info_restroom_woman">Toilettes pour femmes.</string>
+    <string name="man_restroom">Toilettes hommes</string>
+    <string name="password_password_confirmation_no_match">Votre mot de passe de confirmation n\'est pas le même que votre mot de passe</string>
+    <string name="woman_restroom">Toilettes femmes</string>
+    <string name="admin_code">Code admin</string>
+    <string name="need_internet_account">Vous avez besoin d\'une connexion internet pour vous créer un compte</string>
+    <string name="error_server">Une erreur est survenue avec le serveur</string>
+    <string name="enter_email">Veuillez saisir une adresse e-mail</string>
+    <string name="enter_login">Veuillez saisir un nom d\'utilisateur</string>
+    <string name="enter_password">Veuillez saisir un mot de passe</string>
+    <string name="enter_password_confirmation">Veuillez saisir la confirmation du mot de passe</string>
 
 
 </resources>
