--- a/AugmentEPF/app/src/main/res/values/strings.xml
+++ b/AugmentEPF/app/src/main/res/values/strings.xml
@@ -159,4 +159,5 @@
     <string name="nav_parameters">Navigation parameters</string>
     <string name="action_settings">Settings</string>
     <string name="fullscreen">FullScreen</string>
+    <string name="admin_activity_title">Administrative Tools</string>
 </resources>
