--- a/AugmentEPF/app/src/main/res/values/strings.xml
+++ b/AugmentEPF/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="admin_1st_floor">1st Floor</string>
     <string name="admin_ground_floor">Ground Floor</string>
     <string name="admin_lower_floor">Lower Floor</string>
+    <string name="admin_update">Update existing?</string>
 </resources>
